--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "zmq"
-version = "0.9.0"
+name = "zmq-mobile"
+version = "0.1.0"
 authors = [
     "a.rottmann@gmx.at",
     "erick.tryzelaar@gmail.com",
+    "redmike7@gmail.com"
 ]
 license = "MIT/Apache-2.0"
 description = "High-level bindings to the zeromq library"
 keywords = ["bindings", "protocol"]
-repository = "https://github.com/erickt/rust-zmq"
+repository = "https://github.com/mikelodder7/rust-zmq-mobile"
 readme = "README.md"
 build = "build.rs"
 
@@ -74,8 +75,6 @@ path = "examples/zguide/weather_server/main.rs"
 
 [features]
 unstable = []
-default = ["zmq_has"]
-zmq_has = [] # zmq_has was added in zeromq 4.1.
 unstable-testing = ["compiletest_rs", "unstable"]
 #unstable-testing = ["clippy", "compiletest_rs", "unstable"]
 
@@ -154,13 +153,10 @@ path="examples/zguide/asyncsrv/main.rs"
 [dependencies]
 libc = "0.2.15"
 log = "0.3.6"
-zmq-sys = { version = "0.9.0", path = "zmq-sys" }
+zmq-sys-mobile = { version = "0.1.0", path = "zmq-sys" }
 compiletest_rs = { version = "0.*", optional = true }
 clippy = { version = "0.*", optional = true }
 bitflags = "0.7"
-
-[build-dependencies]
-zmq-sys = { version = "0.9.0", path = "zmq-sys" }
 
 [dev-dependencies]
 env_logger = "0.3"
